<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightYellow"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/currentActivityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/activityName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/DarkOliveGreen"
        android:textStyle="bold"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="20dp"
                android:text="@string/startdateDefault"
                android:textColor="@color/DarkOliveGreen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/durationDefault"
                android:textColor="@color/DarkOliveGreen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/placeDefault"
                android:textColor="@color/DarkOliveGreen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/weatherDefault"
                android:textColor="@color/DarkOliveGreen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/White"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/noTips"
                android:textColor="@color/Gray"
                android:paddingBottom="40dp"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/shareTipsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="120dip"
            android:layout_marginRight="120dip"
            android:background="@color/PaleGreen"
            android:gravity="center"
            android:text="@string/shareTips"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>